<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.4</version>
        <relativePath/>
    </parent>

    <groupId>no.nav</groupId>
    <artifactId>veilarbperson</artifactId>
    <version>1</version>
    <name>veilarbperson</name>
    <description>API for uthenting av informasjon om brukere</description>

    <properties>
        <java.version>21</java.version>
        <common.version>3.2024.10.25_13.44-9db48a0dbe67</common.version>
        <tjenestespesifikasjoner.version>1.2019.09.25-00.21-49b69f0625e0</tjenestespesifikasjoner.version>
        <kotlin.version>2.1.20</kotlin.version>
        <poao-tilgang.version>2024.11.26_08.36-ad014162ce23</poao-tilgang.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
                <version>${kotlin.version}</version>
                <executions>
                    <execution>
                        <id>compile</id>
                        <phase>process-sources</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>test-compile</id>
                        <phase>process-test-sources</phase>
                        <goals>
                            <goal>test-compile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <jvmTarget>21</jvmTarget>
                    <compilerPlugins>
                        <plugin>spring</plugin>
                    </compilerPlugins>
                </configuration>

                <dependencies>
                    <dependency>
                        <groupId>org.jetbrains.kotlin</groupId>
                        <artifactId>kotlin-maven-allopen</artifactId>
                        <version>${kotlin.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
        <finalName>veilarbperson</finalName>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib</artifactId>
            <version>${kotlin.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.module</groupId>
            <artifactId>jackson-module-kotlin</artifactId>
        </dependency>

        <dependency>
            <groupId>com.github.ben-manes.caffeine</groupId>
            <artifactId>caffeine</artifactId>
            <version>3.2.0</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-cache</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-logging</artifactId>
        </dependency>
        <dependency>
            <groupId>io.micrometer</groupId>
            <artifactId>micrometer-registry-prometheus</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-ui</artifactId>
            <version>1.8.0</version>
        </dependency>
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>4.12.0</version>
        </dependency>
        <!-- Consumer  -->
        <dependency>
            <groupId>no.nav.tjenestespesifikasjoner</groupId>
            <artifactId>person-v3-tjenestespesifikasjon</artifactId>
            <version>${tjenestespesifikasjoner.version}</version>
        </dependency>

        <!-- Common Dependencies -->
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>json</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>client</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>cxf</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>util</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>auth</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>log</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>health</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>token-client</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>metrics</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>audit-log</artifactId>
            <version>${common.version}</version>
        </dependency>

        <dependency>
            <groupId>no.nav.poao-tilgang</groupId>
            <artifactId>client</artifactId>
            <version>${poao-tilgang.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.poao-tilgang</groupId>
            <artifactId>poao-tilgang-test-mockclient</artifactId>
            <version>${poao-tilgang.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.38</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>

        <!-- test -->
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-contract-stub-runner</artifactId>
            <version>4.2.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>test</artifactId>
            <version>${common.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.vintage</groupId>
            <artifactId>junit-vintage-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.tomakehurst</groupId>
            <artifactId>wiremock-jre8-standalone</artifactId>
            <version>2.35.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>no.bekk.bekkopen</groupId>
            <artifactId>nocommons</artifactId>
            <version>0.16.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <repositories>
        <!-- Legger til central eksplisitt for prioritet over jitpack -->
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
        <repository>
            <id>nav-github</id>
            <url>https://github-package-registry-mirror.gc.nav.no/cached/maven-release</url>
        </repository>
    </repositories>
</project>
